--- a/SistemaTesis/appsettings.json
+++ b/SistemaTesis/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SistemaTesis-C6A4EF1A-7C5E-41BF-BAA8-F5BE8DD1C7B6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-QH3B1NAD\\SQLEXPRESS;Database=dbAsentamientos;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
