Inicio Modelo Cantones

--- a/SistemaTesis/appsettings.json
+++ b/SistemaTesis/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-QH3B1NAD\\SQLEXPRESS;Database=dbAsentamientos;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=PCA-MXL6170QLX\MSSQLEXPRESS2017;Database=DbAsentamientosInformales;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=PCA-MXL6170QLX\\MSSQLEXPRESS2017;Database=dbAsentamientosTesis;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
